[package]
name = "git2-issue"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
config = "0.10"
dotenv = "0.15"
dotenv_codegen = "0.15"
confy = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
git2 = "0.13"
log = "0.4"
env_logger = "0.7"
lazy_static = "1.4"
rand = "0.7"
notify = "4.0"
quicli = "0.4"
structopt = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1.3"
libc = "0.2"
tempfile = "3.1"
url = "2.1"
path-clean = "0.1"
thiserror = "1.0"
maplit = "1.0"
urlencoding = "1.1"